@@ -11,7 +11,7 @@ Suggests: MASS, ElemStatLearn
 Description: 
 	The genridge package introduces generalizations of the standard univariate
 	ridge trace plot used in ridge regression and related methods.  These graphical methods
-	show both bias and precision, by plotting the covariance ellipsoids of the estimated
+	show both bias (actually, shrinkage) and precision, by plotting the covariance ellipsoids of the estimated
 	coefficients, rather than just the estimates themselves.
 License: GPL (>= 2)
 LazyLoad: yes
